tests/dataset/job/compiler/c/q12.error
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c: In function ‘test_Q12_finds_high_rated_US_drama_or_horror_with_company’:
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:288:11: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  288 |       tmp1.len) {
      |           ^
      |           ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:296:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  296 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:341:29: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  341 |   result_item_list_t tmp4 = result_item_list_t_create(
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:342:19: error: ‘(company_name_t *)&company_name’ is a pointer; did you mean to use ‘->’?
  342 |       company_name.len * movie_companies.len * company_type.len * title.len *
      |                   ^
      |                   ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:342:41: error: ‘(movie_companie_t *)&movie_companies’ is a pointer; did you mean to use ‘->’?
  342 |       company_name.len * movie_companies.len * company_type.len * title.len *
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:342:60: error: ‘(company_type_t *)&company_type’ is a pointer; did you mean to use ‘->’?
  342 |       company_name.len * movie_companies.len * company_type.len * title.len *
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:342:72: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  342 |       company_name.len * movie_companies.len * company_type.len * title.len *
      |                                                                        ^
      |                                                                        ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:343:17: error: ‘(movie_info_t *)&movie_info’ is a pointer; did you mean to use ‘->’?
  343 |       movie_info.len * info_type.len * movie_info_idx.len * info_type.len);
      |                 ^
      |                 ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:343:33: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  343 |       movie_info.len * info_type.len * movie_info_idx.len * info_type.len);
      |                                 ^
      |                                 ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:343:54: error: ‘(movie_info_idx_t *)&movie_info_idx’ is a pointer; did you mean to use ‘->’?
  343 |       movie_info.len * info_type.len * movie_info_idx.len * info_type.len);
      |                                                      ^
      |                                                      ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:343:70: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  343 |       movie_info.len * info_type.len * movie_info_idx.len * info_type.len);
      |                                                                      ^
      |                                                                      ->
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:414:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  414 |     _json_string(it.movie_company);
      |                  ~~^~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:422:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  422 |     _json_string(it.drama_horror_movie);
      |                  ~~^~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq122788158615/001/prog.c:426:70: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  426 |   test_Q12_finds_high_rated_US_drama_or_horror_with_company_result = result;
      |                                                                      ^~~~~~
